<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="telcel.android.rick.com.rvisor.LoginActivity">



    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="5"
                app:counterOverflowTextAppearance="@style/CounterOverFlow"
                app:counterTextAppearance="@style/Counter"
                app:errorEnabled="true"
                >

                <EditText
                    android:id="@+id/distribuidor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_distribuidor"
                    android:digits="0123456789"
                    android:inputType="number"
                    android:maxLength="5"
                    android:singleLine="true"

                     />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="5"
                app:counterOverflowTextAppearance="@style/CounterOverFlow"
                app:counterTextAppearance="@style/Counter"
                app:errorEnabled="true"
                >

                <EditText
                    android:id="@+id/vendedor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_vendedor"
                    android:imeActionId="@+id/login"
                    android:inputType="number"
                    android:digits="0123456789"
                    android:maxLength="5"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/accion_ingresar"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
